syntax = "proto3";
package protocol;

import "core/Tron.proto";
import "core/Contract.proto";

option java_package = "org.tron.api"; //Specify the name of the package that generated the Java file
option java_outer_classname = "GrpcAPI"; //Specify the class name of the generated Java file

service Wallet {

  rpc GetBalance (Account) returns (Account) {

  };
  rpc CreateTransaction (TransferContract) returns (Transaction) {

  };

  rpc BroadcastTransaction (Transaction) returns (Return) {

  };

  rpc CreateAccount (AccountCreateContract) returns (Transaction) {

  };

  rpc VoteWitnessAccount (VoteWitnessContract) returns (Transaction) {

  };

  rpc CreateAssetIssue (AssetIssueContract) returns (Transaction) {

  };


  rpc CreateWitness (WitnessCreateContract) returns (Transaction) {

  };


};

message Return {
  bool result = 1;
}
